refactor: combine tmux config files

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,192 +1,277 @@
-# use UTF8
-# set -g utf8
-# set-window-option -g utf8 on
-
-# set shell
-set -g default-shell $SHELL
+set -g prefix C-Space
+bind Space send-prefix
+set -s escape-time 0
 
 
-# Copy-paste integration
-set-option -g default-command "reattach-to-user-namespace -l ${SHELL}"
-# bind -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-
-# make tmux display things in 256 colors
-# set -g default-terminal "screen-256color"
-# set -g default-terminal "screen-256color-bce"
-set -g default-terminal "xterm-256color"
-# set-option -ga terminal-overrides ",tmux-256color-italic:Tc"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-
-# Use vim keybindings in copy mode
-setw -g mode-keys v
-
-# Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Bind ']' to use pbpaste
-bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
-
-
-# set scrollback history to 30000 (30k)
-set -g history-limit 30000
-#
-# set ` (tic) as the default prefix key combination
-# and unbind C-b to free it up
-unbind C-b
-set -g prefix `
-
-# use send-prefix to pass ` (tic) through to application
-bind ` send-prefix
-
-# shorten command delay
-set -sg escape-time 1
-
-# set window and pane index to 1 (0 by default)
-set -g base-index 1
-set -g pane-base-index 1
-
-# # reload ~/.tmux.conf using PREFIX r
-# bind r source-file ~/.tmux.conf \; display "Reloaded!"
-#
-# # use PREFIX | to split window horizontally and PREFIX - to split vertically
-# bind | split-window -h
-# bind - split-window -v
-#
-# # Make the current window the first window
-# bind T swap-window -t 1
-#
-# # map Vi movement keys as pane movement keys
-# bind h select-pane -L
-# bind j select-pane -D
-# bind k select-pane -U
-# bind l select-pane -R
-#
-# # and use C-h and C-l to cycle thru panes
-# bind -r C-h select-window -t :-
-# bind -r C-l select-window -t :+
-#
-# resize panes using PREFIX H, J, K, L
-bind H resize-pane -L 5
-bind J resize-pane -D 5
-bind K resize-pane -U 5
-bind L resize-pane -R 5
-#
-# # C-i for even-vertical arrangement and C-o to zoom current pane
-# bind-key C-i select-layout even-vertical
-# bind-key C-v select-layout even-horizontal
-# bind-key C-o resize-pane -y 1000
-#
-# # Sync panes
-# bind C-s set-window-option synchronize-panes
-
-# explicitly disable mouse control
-set -g mouse on
-
-# # ---------------------
-# # Copy & Paste
-# # ---------------------
-# # provide access to the clipboard for pbpaste, pbcopy
-# set-option -g default-command "reattach-to-user-namespace -l zsh"
-# set-window-option -g automatic-rename on
-#
-# # use vim keybindings in copy mode
-# setw -g mode-keys vi
-#
-# # setup 'v' to begin selection as in Vim
-# bind-key -t vi-copy v begin-selection
-# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-#
-# # update default binding of 'Enter' to also use copy-pipe
-# unbind -t vi-copy Enter
-# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-#
-# bind y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
-# bind C-y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
-#
-# # Save entire tmux history to a file - file will be on machine where tmux is
-# # running
-# bind-key * command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
-#
+# ----------------------
+# Terminal colors
 # -----------------------
-# Multistart panes
-# ----------------------
-bind-key P run-shell 'tmux-multistart as'
-bind-key A run-shell 'tmux-multistart alpha'
-bind-key B run-shell 'tmux-multistart beta'
-bind-key W run-shell 'tmux-multistart web'
-bind-key D run-shell 'tmux-multistart dev'
-bind-key T run-shell 'tmux-multistart txhub'
+# set-option -ga terminal-overrides ",tmux-256color:Tc,xterm-256color:Tc"
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+set-environment -g COLORTERM "truecolor"
 
-bind-key C command-prompt -p "machine(s)/group: " "run-shell 'tmux-multistart %1'"
-#
 # ----------------------
-# set some pretty colors
-# ----------------------
-# set pane colors - hilight the active pane
-	set-option -g pane-border-fg colour235 #base02
-	set-option -g pane-active-border-fg colour33 #blue
-#set-option -g pane-active-border-fg colour240 #base01
+# Vim clipboard
+# -----------------------
+set -g mode-keys vi
+bind -T copy-mode-vi v send -X begin-selection
+# only for mac clipboard
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind P paste-buffer
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 
-# colorize messages in the command line
-	set-option -g message-bg black #base02
-	set-option -g message-fg brightred #orange
+# ----------------------
+# Vim movement
+# -----------------------
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+# bind-key -n 'C-Space' if-shell "$is_vim" 'send-keys C-Space' 'select-pane -t:.+'
+
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+# bind-key -T copy-mode-vi 'C-\' select-pane -l
+# bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
 
 # ----------------------
 # Status Bar
 # -----------------------
-	set-option -g status on                # turn the status bar on
-# 	set -g status-utf8 on                  # set utf-8 for the status bar
-	set -g status-interval 5               # set update frequencey (default 15 seconds)
-	set -g status-justify centre           # center window list for clarity
-# 	set-option -g status-position top    # position the status bar at top of screen
+set-option -g status-bg "#1f2335"
+# set-option -g status-bg "#24283b"
+set -g status-justify centre           # center window list for clarity
+set -g status-left "#[fg=black,bg=blue,nobold] #S "
+set -g status-right "#[fg=white,bg=#1f2335,nobold] %A %d %B %H:%M   "
+set -g window-status-format "#[fg=blue,bg=#1f2335,nobold,noitalics,nounderscore] #W "
+# set -g window-status-format "#[fg=black,bg=#414868,nobold,noitalics,nounderscore]  #I #W  "
+set -g window-status-current-format "#[fg=black,bg=blue,nobold,noitalics,nounderscore] #W "
+# set -g window-status-current-format "#[fg=black,bg=blue,nobold,noitalics,nounderscore] #I #W "
 
-# visual notification of activity in other windows
-	setw -g monitor-activity on
-	set -g visual-activity on
+# ----------------------
+# plugins
+# -----------------------
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'AlexFradle/tmux-pane-status-center'
+run '~/.tmux/plugins/tpm/tpm'
 
-# set color for status bar
-	set-option -g status-bg colour235 #base02
-	set-option -g status-fg yellow #yellow
-	set-option -g status-attr dim
 
-# set window list colors - red for active and cyan for inactive
-	set-window-option -g window-status-fg brightblue #base0
-	set-window-option -g window-status-bg colour236
-	set-window-option -g window-status-attr dim
 
-	set-window-option -g window-status-current-fg brightred #orange
-	set-window-option -g window-status-current-bg colour236
-	set-window-option -g window-status-current-attr bright
 
-# show host name and IP address on left side of status bar
-	set -g status-left-length 85
-	set -g status-left "#[fg=green]: #h : #[fg=brightblue]#(dig +short myip.opendns.com @resolver1.opendns.com) #[fg=yellow]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #(ifconfig en3 | grep 'inet ' | awk '{print \"en3 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') #[fg=green]#(/System/Library/PrivateFrameworks/Apple80211.framework/Versions/Current/Resources/airport -I | awk -F': ' '/ SSID/{print $2}') "
 
-# show session name, window & pane number, date and time on right side of
-# status bar
-	set -g status-right-length 80
-	set -g status-right "#[fg=cyan]#{=15:pane_title} : #[fg=blue]#S #I:#P #[fg=yellow]: %d %b %Y #[fg=green]: %l:%M %p : #(date -u | awk '{print $4}') :"
+
+
+
+
+
+
+
+
+
+
+#old
+
+# bind-key -T copy-mode-vi 'C-\' select-pane -l
+# bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
+# # use UTF8
+# # set -g utf8
+# # set-window-option -g utf8 on
+
+# # set shell
+# set -g default-shell $SHELL
+
+
+# # Copy-paste integration
+# set-option -g default-command "reattach-to-user-namespace -l ${SHELL}"
+# # bind -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
+# # make tmux display things in 256 colors
+# # set -g default-terminal "screen-256color"
+# # set -g default-terminal "screen-256color-bce"
+# set -g default-terminal "xterm-256color"
+# # set-option -ga terminal-overrides ",tmux-256color-italic:Tc"
+# set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+# # Use vim keybindings in copy mode
+# setw -g mode-keys v
+
+# # Setup 'v' to begin selection as in Vim
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# # Update default binding of `Enter` to also use copy-pipe
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# # Bind ']' to use pbpaste
+# bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+
+
+# # set scrollback history to 30000 (30k)
+# set -g history-limit 30000
+# #
+# # set ` (tic) as the default prefix key combination
+# # and unbind C-b to free it up
+# unbind C-b
+# set -g prefix `
+
+# # use send-prefix to pass ` (tic) through to application
+# bind ` send-prefix
+
+# # shorten command delay
+# set -sg escape-time 1
+
+# # set window and pane index to 1 (0 by default)
 # set -g base-index 1
 # set -g pane-base-index 1
 
-	is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-			| grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-			bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-			bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-			bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-			bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-			bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+# # # reload ~/.tmux.conf using PREFIX r
+# # bind r source-file ~/.tmux.conf \; display "Reloaded!"
+# #
+# # # use PREFIX | to split window horizontally and PREFIX - to split vertically
+# # bind | split-window -h
+# # bind - split-window -v
+# #
+# # # Make the current window the first window
+# # bind T swap-window -t 1
+# #
+# # # map Vi movement keys as pane movement keys
+# # bind h select-pane -L
+# # bind j select-pane -D
+# # bind k select-pane -U
+# # bind l select-pane -R
+# #
+# # # and use C-h and C-l to cycle thru panes
+# # bind -r C-h select-window -t :-
+# # bind -r C-l select-window -t :+
+# #
+# # resize panes using PREFIX H, J, K, L
+# bind H resize-pane -L 5
+# bind J resize-pane -D 5
+# bind K resize-pane -U 5
+# bind L resize-pane -R 5
+# #
+# # # C-i for even-vertical arrangement and C-o to zoom current pane
+# # bind-key C-i select-layout even-vertical
+# # bind-key C-v select-layout even-horizontal
+# # bind-key C-o resize-pane -y 1000
+# #
+# # # Sync panes
+# # bind C-s set-window-option synchronize-panes
+
+# # explicitly disable mouse control
+# set -g mouse on
+
+# # # ---------------------
+# # # Copy & Paste
+# # # ---------------------
+# # # provide access to the clipboard for pbpaste, pbcopy
+# # set-option -g default-command "reattach-to-user-namespace -l zsh"
+# # set-window-option -g automatic-rename on
+# #
+# # # use vim keybindings in copy mode
+# # setw -g mode-keys vi
+# #
+# # # setup 'v' to begin selection as in Vim
+# # bind-key -t vi-copy v begin-selection
+# # bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# #
+# # # update default binding of 'Enter' to also use copy-pipe
+# # unbind -t vi-copy Enter
+# # bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# #
+# # bind y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
+# # bind C-y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
+# #
+# # # Save entire tmux history to a file - file will be on machine where tmux is
+# # # running
+# # bind-key * command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
+# #
+# # -----------------------
+# # Multistart panes
+# # ----------------------
+# bind-key P run-shell 'tmux-multistart as'
+# bind-key A run-shell 'tmux-multistart alpha'
+# bind-key B run-shell 'tmux-multistart beta'
+# bind-key W run-shell 'tmux-multistart web'
+# bind-key D run-shell 'tmux-multistart dev'
+# bind-key T run-shell 'tmux-multistart txhub'
+
+# bind-key C command-prompt -p "machine(s)/group: " "run-shell 'tmux-multistart %1'"
+# #
+# # ----------------------
+# # set some pretty colors
+# # ----------------------
+# # set pane colors - hilight the active pane
+# 	set-option -g pane-border-fg colour235 #base02
+# 	set-option -g pane-active-border-fg colour33 #blue
+# #set-option -g pane-active-border-fg colour240 #base01
+
+# # colorize messages in the command line
+# 	set-option -g message-bg black #base02
+# 	set-option -g message-fg brightred #orange
+
+# # ----------------------
+# # Status Bar
+# # -----------------------
+# 	set-option -g status on                # turn the status bar on
+# # 	set -g status-utf8 on                  # set utf-8 for the status bar
+# 	set -g status-interval 5               # set update frequencey (default 15 seconds)
+# 	set -g status-justify centre           # center window list for clarity
+# # 	set-option -g status-position top    # position the status bar at top of screen
+
+# # visual notification of activity in other windows
+# 	setw -g monitor-activity on
+# 	set -g visual-activity on
+
+# # set color for status bar
+# 	set-option -g status-bg colour235 #base02
+# 	set-option -g status-fg yellow #yellow
+# 	set-option -g status-attr dim
+
+# # set window list colors - red for active and cyan for inactive
+# 	set-window-option -g window-status-fg brightblue #base0
+# 	set-window-option -g window-status-bg colour236
+# 	set-window-option -g window-status-attr dim
+
+# 	set-window-option -g window-status-current-fg brightred #orange
+# 	set-window-option -g window-status-current-bg colour236
+# 	set-window-option -g window-status-current-attr bright
+
+# # show host name and IP address on left side of status bar
+# 	set -g status-left-length 85
+# 	set -g status-left "#[fg=green]: #h : #[fg=brightblue]#(dig +short myip.opendns.com @resolver1.opendns.com) #[fg=yellow]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #(ifconfig en3 | grep 'inet ' | awk '{print \"en3 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') #[fg=green]#(/System/Library/PrivateFrameworks/Apple80211.framework/Versions/Current/Resources/airport -I | awk -F': ' '/ SSID/{print $2}') "
+
+# # show session name, window & pane number, date and time on right side of
+# # status bar
+# 	set -g status-right-length 80
+# 	set -g status-right "#[fg=cyan]#{=15:pane_title} : #[fg=blue]#S #I:#P #[fg=yellow]: %d %b %Y #[fg=green]: %l:%M %p : #(date -u | awk '{print $4}') :"
+# # set -g base-index 1
+# # set -g pane-base-index 1
+
+# 	is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+# 			| grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+# 			bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+# 			bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+# 			bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+# 			bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+# 			bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+# # List of plugins
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
+# # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# run -b '~/.tmux/plugins/tpm/tpm'
