feat(tmux): update tmux config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,7 @@
-set -g prefix C-Space
-bind Space send-prefix
-set -s escape-time 0
+unbind-key C-b 
+set-option -g prefix C-Space
+bind-key C-Space send-prefix
+set-option -s escape-time 0
 
 
 # ----------------------
@@ -23,12 +24,17 @@ bind P paste-buffer
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # ----------------------
+# Project 
+# -----------------------
+bind-key "p" neww "tmux-booster -d ~/projects/personal -d ~/projects/whas -d ~/projects/hot"
+
+# ----------------------
 # Vim movement
 # -----------------------
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|[ln]?vim?x?)(diff)?$'"
 bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
 bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
 bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
