--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -57,6 +57,7 @@ bind-key -T copy-mode-vi 'C-l' select-pane -R
 set-option -g status-bg "#1f2335"
 # set-option -g status-bg "#24283b"
 set -g status-justify centre           # center window list for clarity
+set -g status-left-length 50
 set -g status-left "#[fg=black,bg=blue,nobold] #S "
 set -g status-right "#[fg=white,bg=#1f2335,nobold] %A %d %B %H:%M   "
 set -g window-status-format "#[fg=blue,bg=#1f2335,nobold,noitalics,nounderscore] #W "
