--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -26,7 +26,7 @@ bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy
 # ----------------------
 # Project 
 # -----------------------
-bind-key "p" neww "tmux-booster -d ~/projects/personal -d ~/projects/whas -d ~/projects/hot"
+bind-key "p" neww "tmux-booster -d ~/projects -d ~/projects/whas -d ~/projects/hot"
 
 # ----------------------
 # Vim movement
@@ -54,13 +54,14 @@ bind-key -T copy-mode-vi 'C-l' select-pane -R
 # ----------------------
 # Status Bar
 # -----------------------
-set-option -g status-bg "#1f2335"
-# set-option -g status-bg "#24283b"
+set-option -g status-bg "#1e1e2e"
+# set-option -g status-bg "#181825"
+
 set -g status-justify centre           # center window list for clarity
 set -g status-left-length 50
 set -g status-left "#[fg=black,bg=blue,nobold] #S "
-set -g status-right "#[fg=white,bg=#1f2335,nobold] %A %d %B %H:%M   "
-set -g window-status-format "#[fg=blue,bg=#1f2335,nobold,noitalics,nounderscore] #W "
+set -g status-right "#[fg=white,bg=#1e1e2e,nobold] %A %d %B %H:%M   "
+set -g window-status-format "#[fg=blue,bg=#1e1e2e,nobold,noitalics,nounderscore] #W "
 # set -g window-status-format "#[fg=black,bg=#414868,nobold,noitalics,nounderscore]  #I #W  "
 set -g window-status-current-format "#[fg=black,bg=blue,nobold,noitalics,nounderscore] #W "
 # set -g window-status-current-format "#[fg=black,bg=blue,nobold,noitalics,nounderscore] #I #W "
