--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -126,7 +126,7 @@ animations {
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
-    animation = windows, .5, 7, myBezier
+    animation = windows, 0, 7, myBezier
     animation = windowsOut, .5, 7, default, popin 80%
     animation = border, 0, 10, default
     animation = borderangle, 1, 8, default
