--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,6 +24,13 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 
+# Desktop
+monitor=DP-1,1920x1200,1920x0,auto
+monitor=DP-2,1920x1200,0x0,auto
+
+#Laptop
+# monitor=,preferred,auto,auto
+
 # unscale XWayland
 xwayland {
   force_zero_scaling = true
@@ -38,7 +45,7 @@ xwayland {
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = nautilus
 $menu = rofi -show drun
 
 
@@ -65,9 +72,16 @@ exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # 
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_SCALE_FACTOR,1
+#Desktop
+env = GDK_SCALE,1
+#Laptop
+# env = GDK_SCALE,2
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = GDK_SCALE,2
 
 #####################
 ### LOOK AND FEEL ###
@@ -272,6 +286,32 @@ bind = CTRL SHIFT, 4, exec, grim -g "$(slurp)" - | wl-copy -t 'image/png'
 
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
+
+# Desktop
+workspace = 1, monitor:DP-1
+workspace = 2, monitor:DP-1
+workspace = 3, monitor:DP-1
+workspace = 4, monitor:DP-1
+workspace = 5, monitor:DP-1
+workspace = 6, monitor:DP-2
+workspace = 7, monitor:DP-2
+workspace = 8, monitor:DP-2
+workspace = 9, monitor:DP-2
+workspace = 10, monitor:DP-2
+
+#Laptop
+# workspace = 1, monitor:eDP-1
+# workspace = 2, monitor:eDP-1
+# workspace = 3, monitor:eDP-1
+# workspace = 4, monitor:eDP-1
+# workspace = 5, monitor:eDP-1
+# workspace = 6, monitor:eDP-1
+# workspace = 7, monitor:eDP-1
+# workspace = 8, monitor:eDP-1
+# workspace = 9, monitor:eDP-1
+# workspace = 10, monitor:eDP-1
+
+
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
