--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -138,14 +138,15 @@ animations {
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
+    bezier = fastInSlowOut, 0, 0.51, 0.5, 1
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
-    animation = windows, 0, 7, myBezier
-    animation = windowsOut, .5, 7, default, popin 80%
-    animation = border, 0, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = windows, 1, 1, fastInSlowOut
+    # animation = windowsOut, 3, 7, default, popin 80%
+    animation = border, 0, 1, default
+    animation = borderangle, 3, 6, default
+    animation = fade, 1, 6, default
+    animation = workspaces, 1, 2, default
 }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
