chore: tmux remove clock from status bar

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -60,7 +60,7 @@ set-option -g status-bg "#1e1e2e"
 set -g status-justify centre           # center window list for clarity
 set -g status-left-length 50
 set -g status-left "#[fg=black,bg=blue,nobold] #S "
-set -g status-right "#[fg=white,bg=#1e1e2e,nobold] %A %d %B %H:%M   "
+# set -g status-right "#[fg=white,bg=#1e1e2e,nobold] %A %d %B %H:%M   "
 set -g window-status-format "#[fg=blue,bg=#1e1e2e,nobold,noitalics,nounderscore] #W "
 # set -g window-status-format "#[fg=black,bg=#414868,nobold,noitalics,nounderscore]  #I #W  "
 set -g window-status-current-format "#[fg=black,bg=blue,nobold,noitalics,nounderscore] #W "
