feat: update hyperland for new screens

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,5 +1,8 @@
- loce
 preload = /home/liamederzeel/Downloads/mid.png
+preload = /home/liamederzeel/Pictures/wp1.jpg
+preload = /home/liamederzeel/Pictures/wp2.jpg
 splash = true
 
 wallpaper = eDP-1,/home/liamederzeel/Downloads/mid.png
+wallpaper = DP-1,/home/liamederzeel/Pictures/wp1.jpg
+wallpaper = DP-2,/home/liamederzeel/Pictures/wp2.jpg
