--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,8 +25,8 @@
 monitor=,preferred,auto,auto
 
 # Desktop
-monitor=DP-1,1920x1200,1920x0,auto
-monitor=DP-2,1920x1200,0x0,auto
+monitor=DP-1,3840x2160,0x-1440,1.5,transform,2
+monitor=DP-2,3840x2160,0x0,1.5
 
 #Laptop
 # monitor=,preferred,auto,auto
@@ -80,8 +80,8 @@ env = QT_SCALE_FACTOR,1
 env = GDK_SCALE,1
 #Laptop
 # env = GDK_SCALE,2
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+env = XCURSOR_SIZE,32
+env = HYPRCURSOR_SIZE,32
 
 #####################
 ### LOOK AND FEEL ###
@@ -289,16 +289,16 @@ bind = CTRL SHIFT, 4, exec, grim -g "$(slurp)" - | wl-copy -t 'image/png'
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
 # Desktop
-workspace = 1, monitor:DP-1
-workspace = 2, monitor:DP-1
-workspace = 3, monitor:DP-1
-workspace = 4, monitor:DP-1
-workspace = 5, monitor:DP-1
-workspace = 6, monitor:DP-2
-workspace = 7, monitor:DP-2
-workspace = 8, monitor:DP-2
-workspace = 9, monitor:DP-2
-workspace = 10, monitor:DP-2
+workspace = 1, monitor:DP-2
+workspace = 2, monitor:DP-2
+workspace = 3, monitor:DP-2
+workspace = 4, monitor:DP-2
+workspace = 5, monitor:DP-2
+workspace = 6, monitor:DP-1
+workspace = 7, monitor:DP-1
+workspace = 8, monitor:DP-1
+workspace = 9, monitor:DP-1
+workspace = 10, monitor:DP-1
 
 #Laptop
 # workspace = 1, monitor:eDP-1
