feat(tmux-booster): add hoph

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -26,7 +26,7 @@ bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy
 # ----------------------
 # Project 
 # -----------------------
-bind-key "p" neww "tmux-booster -d ~/projects -d ~/projects/whas -d ~/projects/hot"
+bind-key "p" neww "tmux-booster -d ~/projects -d ~/projects/whas -d ~/projects/hot -d ~/projects/hoph"
 
 # ----------------------
 # Vim movement
