feat: update hyprland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -83,6 +83,10 @@ env = GDK_SCALE,1
 env = XCURSOR_SIZE,32
 env = HYPRCURSOR_SIZE,32
 
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
+
 #####################
 ### LOOK AND FEEL ###
 #####################
@@ -117,10 +121,11 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    # shadow: {
+    #     range = 4
+    #     render_power = 3
+    #     color = rgba(1a1a1aee)
+    # }
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
@@ -163,7 +168,7 @@ master {
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
@@ -273,10 +278,15 @@ bind = , XF86KbdBrightnessDown, exec, brightnessctl -d smc::kbd_backlight s 10%-
 binde = , XF86MonBrightnessUp, exec, brightnessctl set 10%+
 binde = , XF86MonBrightnessDown, exec, brightnessctl set 10%-
  
-binde = , XF86AudioRaiseVolume, exec, amixer -q sset Master 10%+ 
-binde = , XF86AudioLowerVolume, exec, amixer -q sset Master 10%-
-binde = , XF86AudioMute, exec, amixer sset Master toggle
-binde = CTRL, XF86AudioMute, exec, amixer set Capture toggle
+# binde = , XF86AudioRaiseVolume, exec, amixer -q sset Master 10%+ 
+# binde = , XF86AudioLowerVolume, exec, amixer -q sset Master 10%-
+binde = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5% 
+binde = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+
+# binde = , XF86AudioMute, exec, amixer sset Master toggle
+binde = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+# binde = CTRL, XF86AudioMute, exec, amixer set Capture toggle
+binde = CTRL, XF86AudioMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 bind = CTRL SHIFT, 4, exec, grim -g "$(slurp)" - | wl-copy -t 'image/png'
 
