--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,9 +1,7 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "source": "~/assets/nix-snowflake-colours.png",
-    "type": "auto",
-    "height": 15,
+    "source": "~/assets/nix.txt",
     "padding": {
       "top": 2,
       "right": 4,
